--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "next": "14.2.5",
+    "nodemon": "^3.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
